--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row">
                     <div class=" message-l  col-md-4">
-                        <div class="head-img"><img  src="/img/me.jpg" alt=""></div>
+                        <div class="head-img"><img  src="/img/mi.png" alt=""></div>
                         <div class="head-msg">
                             <h3>姓名：李国印</h3>
                             <p>性别: 男 <br>年龄: 24
